<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <View
        android:id="@+id/main_2"
        android:layout_width="411dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/bgPizza"
        />

    <TextView
        android:id="@+id/pizzapepperoni_p"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/pizzapepperoni_p"
        android:textAppearance="@style/pizzapepperoni_p"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/price_rp_66"
        android:layout_width="171dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/price_rp_66"
        android:textAppearance="@style/price_rp_66"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/pepperoni_p"
        android:layout_width="357dp"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/pepperoni_p"
        android:textAppearance="@style/pepperoni"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="298dp" />

    <Button
        android:id="@+id/rectangle_5"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/red"
        android:elevation="4dp"
        android:text="@string/order_now"
        android:textColor="@color/white"
        android:theme="@style/submit"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="435dp" />

    <Button
        android:id="@+id/rectangle_5"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/red"
        android:elevation="4dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:theme="@style/submit"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="492dp" />


</androidx.constraintlayout.widget.ConstraintLayout>