<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <View
        android:id="@+id/person_male"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:background="@drawable/icon"
        />

    <TextView
        android:id="@+id/hello_asep"
        android:layout_width="103dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="13dp"
        android:gravity="top"
        android:text="@string/hello_asep"
        android:textAppearance="@style/hello_asep" />

    <View
        android:id="@+id/circle_crop"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="14dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/paperoni"
        />

    <TextView
        android:id="@+id/pepperoni_p"
        android:layout_width="244dp"
        android:layout_height="107dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="70dp"
        android:gravity="top"
        android:text="@string/pepperoni_p"
        android:textAppearance="@style/pepperoni_p" />

    <View
        android:id="@+id/circle_crop"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/spagheti" />

    <TextView
        android:id="@+id/spaghetti_c"
        android:layout_width="239dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="205dp"
        android:gravity="top"
        android:text="@string/spaghetti_c"
        android:textAppearance="@style/spaghetti_c" />

    <View
        android:id="@+id/circle_crop"
        android:layout_width="125dp"
        android:layout_height="116dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="325dp"
        android:background="@drawable/burger" />

    <TextView
        android:id="@+id/burger_coco"
        android:layout_width="260dp"
        android:layout_height="126dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="330dp"
        android:gravity="top"
        android:text="@string/burger_coco"
        android:textAppearance="@style/burger_coco" />

    <View
        android:id="@+id/circle_cropl"
        android:layout_width="121dp"
        android:layout_height="123dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/steak" />

    <TextView
        android:id="@+id/steak_cocok"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="450dp"
        android:gravity="top"
        android:text="@string/steak_cocok"
        android:textAppearance="@style/steak_cocok" />

    <View
        android:id="@+id/person_male"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="540dp"
        android:background="@drawable/circle" />

    <View
        android:id="@+id/person_male"
        android:layout_width="20dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="359dp"
        android:layout_marginTop="547dp"
        android:background="@drawable/panjang" />

    <View
        android:id="@+id/person_male"
        android:layout_width="40dp"
        android:layout_height="8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="349dp"
        android:layout_marginTop="560dp"
        android:background="@drawable/lebar" />


</RelativeLayout>